refactor(dto): 쿼리 안 쓰는 DTO를 record로 전환, 쿼리쓰는 DTO 에서 setter 제거, dto에 Not null등 제약사항 설정,  Sign up dto 생성,이미지 dto 필요 없어서 제거