@@ -5,13 +5,15 @@ import com.oinkvalley.oinkvalleycore.db.repository.UserRepository;
 import com.oinkvalley.oinkvalleycore.dto.ErrorResponse;
 import com.oinkvalley.oinkvalleycore.dto.LoginRequest;
 import com.oinkvalley.oinkvalleycore.dto.LoginResponse;
+import com.oinkvalley.oinkvalleycore.dto.SignUpRequest;
 import com.oinkvalley.oinkvalleycore.security.JwtUtil;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.crypto.password.PasswordEncoder; // 이거!!
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -19,7 +21,7 @@ public class AuthController {
 
     private final UserRepository userRepository;
     private final JwtUtil jwtUtil;
-    private final PasswordEncoder passwordEncoder; // 추가!
+    private final PasswordEncoder passwordEncoder;
 
     public AuthController(UserRepository userRepository, JwtUtil jwtUtil, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
@@ -28,21 +30,25 @@ public class AuthController {
     }
 
     @PostMapping("/signup")
-    public ResponseEntity<?> signup(@RequestBody User user) {
-        user.setPasswordHash(passwordEncoder.encode(user.getPasswordHash())); // 여기 수정
-        if (user.getRoles() == null || user.getRoles().isEmpty()) {
-            user.setRoles(Arrays.asList("USER"));
-        }
+    public ResponseEntity<?> signup(@Valid @RequestBody SignUpRequest request) {
+        User user = new User();
+        user.setEmail(request.email());
+        user.setPasswordHash(passwordEncoder.encode(request.password()));
+        user.setRoles(
+                (request.roles() == null || request.roles().isEmpty()) ?
+                        List.of("USER") :
+                        request.roles()
+        );
         userRepository.save(user);
         return ResponseEntity.ok("Signup successful!");
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody LoginRequest request) {
-        User user = userRepository.findByEmail(request.getEmail())
+    public ResponseEntity<?> login(@Valid @RequestBody LoginRequest request) {
+        User user = userRepository.findByEmail(request.email())
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        if (!passwordEncoder.matches(request.getPassword(), user.getPasswordHash())) {
+        if (!passwordEncoder.matches(request.password(), user.getPasswordHash())) {
             return ResponseEntity
                     .status(HttpStatus.UNAUTHORIZED)
                     .body(new ErrorResponse("Invalid password"));
@@ -58,20 +64,6 @@ public class AuthController {
                 user.getEmail(),
                 user.getRoles()
         ));
-    }
-
-
-    @PostMapping("/grant-admin/{userId}")
-    public ResponseEntity<?> grantAdminRole(@PathVariable Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        if (!user.getRoles().contains("ADMIN")) {
-            user.getRoles().add("ADMIN");
-            userRepository.save(user);
-        }
-
-        return ResponseEntity.ok("Granted ADMIN role to user " + userId);
     }
 
 }
